Added a image and more elements

--- a/test.html
+++ b/test.html
@@ -1,4 +1,13 @@
-<h1>Hey heading</h1>
-<p>Hey I am paragraph element</p>
-<a href="http://google.com" target="_blank" title="lets go to google">Click me I am a link</a>
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title> Test page</title>
+</head>
+<body>
+    <h1>Hey heading</h1>
+    <p>Hey I am <b>paragraph</b> element</p>
+    <a href="http://google.com" target="_blank" title="lets go to google">Click me I am a link</a>
+    <p>My name is:<br>Cat</p>
+    <img src="image/IMG.jpg">
+</body>
+</html>
