--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <li>passionate</li>
         <li>Good guys</li>
     </ol>
-    <h2>Friends of the team</h2>
+    <h2>Coleagues</h2>
     <p>Adriana. Click on her portfolio:</p>
     <ul>
-        <li>Portfolio</li>
+        <li><a href="https://cs.wikipedia.org/wiki/Adriana">Portfolio</a></li>
     </ul>
 
     </main>
