--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Page Title</title>
+    <link rel="icon" href="image/design.jpg">
 </head>
 <body>
     <!-- header element -->
@@ -23,12 +24,16 @@
         <li>Good guys</li>
     </ol>
     <h2>Coleagues</h2>
-    <p>Adriana. Click on her portfolio:</p>
-    <ul>
-        <li><a href="https://cs.wikipedia.org/wiki/Adriana">Portfolio</a></li>
-    </ul>
+    <p>Adriana. <br>Click on her <a target="_blank" href="https://cs.wikipedia.org/wiki/Adriana">Portfolio</a>
+    </p>
 
     </main>
+
+    <footer>
+        <p>
+            This class was created during a <a target="_blank" href="https://google.com">Tap Tap Kaboom</a> class. &copy; David
+        </p>
+    </footer>
 
 </body>
 </html>
