--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Page Title</title>
     <link rel="icon" href="image/design.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" type="text/css" href="css/koci.css">
 </head>
 <body>
     <!-- header element -->
@@ -16,7 +18,7 @@
     <h2>About Koci design</h2>
     <p>Koci design is great</p>
     <img src="image/archviz.jpg">
-    <p>My team and I</p>
+    <p class="caption">Random Archviz</p>
     <h2>Teams characteristics</h2>
     <ol>
         <li>Good looking team</li>
